--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
     </nav>
 
     <!-- Hero Section -->
+    <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
+            <div class="profile-photo">
+                <img src="/images/MoMo.jpg" alt="Youssef Berrissoul" />
+            </div>
             <h1 class="glitch" data-text="YOUSSEF BERRISSOUL">YOUSSEF BERRISSOUL</h1>
             <p class="subtitle">Ingénieur Cybersécurité & Innovation Numérique</p>
-            <a href="#about" class="btn">Découvrir mon parcours</a>
+            <!-- <a href="#about" class="btn">Découvrir mon parcours</a> -->
         </div>
     </section>
 
