--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/main.js" defer ></script>
-    <title>Youssef Berrissoul - Cybersécurité & Innovation</title>
+    <title>Youssef Berrissoul- Portfolio</title>
 
 </head>
 <body>
@@ -241,32 +241,32 @@
         </div>
     </section>
 
-    <!-- Contact -->
-    <section id="contact" class="fade-in">
-        <h2 class="section-title">Contact</h2>
-        <div class="contact-form">
-            <div class="cards-container">
-                <div class="card">
-                    <h3>📧 Email</h3>
-                    <p>youssef.berrissoul.15@edu.uiz.ac.ma</p>
-                    <p>youssef.berrissoul@usmba.ac.ma</p>
-                </div>
-                <div class="card">
-                    <h3>📱 Téléphone</h3>
-                    <p>+212 6 30 38 81 37</p>
-                </div>
-                <div class="card">
-                    <h3>📍 Localisation</h3>
-                    <p>64 Lots My Driss Tghate, Fès</p>
-                </div>
-                <div class="card">
-                    <h3>🌐 GitHub</h3>
-                    <p>YoussefBerrissoul1</p>
-                    <p>60+ contributions cette année</p>
-                </div>
+   <!-- Contact -->
+<section id="contact" class="fade-in">
+    <h2 class="section-title">Contact</h2>
+    <div class="contact-form">
+        <div class="cards-container">
+            <div class="card">
+                <h3>📧 Email</h3>
+                <p><a href="mailto:youssef.berrissoul.15@edu.uiz.ac.ma" style="color: #00ffff; text-decoration: none;">youssef.berrissoul.15@edu.uiz.ac.ma</a></p>
+                <p><a href="mailto:youssef.berrissoul@usmba.ac.ma" style="color: #00ffff; text-decoration: none;">youssef.berrissoul@usmba.ac.ma</a></p>
+            </div>
+            <div class="card">
+                <h3>📱 Téléphone</h3>
+                <p>+212 6 30 38 81 37</p>
+            </div>
+            <div class="card">
+                <h3>📍 Localisation</h3>
+                <p>  Maroc , Fès</p>
+            </div>
+            <div class="card">
+                <h3>🌐 GitHub</h3>
+                <p><a href="https://github.com/YoussefBerrissoul1" target="_blank" style="color: #00ffff; text-decoration: none;">YoussefBerrissoul1</a></p>
+                <p>60+ contributions cette année</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer>
