--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/main.js" defer ></script>
-    <title>Youssef Berrissoul- Portfolio</title>
-
+    <title>Youssef Berrissoul | Portfolio </title>
 </head>
 <body>
     <!-- Particules animées -->
