--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="/images/MoMo.jpg" alt="Youssef Berrissoul" />
             </div>
             <h1 class="glitch" data-text="YOUSSEF BERRISSOUL">YOUSSEF BERRISSOUL</h1>
-            <p class="subtitle">Ingénieur Cybersécurité & Innovation Numérique</p>
+            <p class="subtitle"> Futur Ingénieur Cybersécurité & Innovation Numérique</p>
             <!-- <a href="#about" class="btn">Découvrir mon parcours</a> -->
         </div>
     </section>
@@ -240,8 +240,8 @@
         </div>
     </section>
 
-   <!-- Contact -->
-<section id="contact" class="fade-in">
+    <!-- Contact -->
+<section id="contact" style="flex: 1 1 calc(50% - 1.5rem);" class="fade-in">
     <h2 class="section-title">Contact</h2>
     <div class="contact-form">
         <div class="cards-container">
@@ -269,7 +269,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Youssef Berrissoul - Cybersécurité | Conçu avec passion pour l'innovation</p>
+        <p>&copy; 2025 Youssef Berrissoul | Conçu avec passion pour l'innovation</p>
     </footer>
 
 </body>
